<resources>
    <string name="app_name">LibrarIST</string>
    <string name="maps_api_key">"AIzaSyBSh4jYSrBpskY1-neF-hkzSb_AMeOF-y4"</string>
    <string name="search_address">Search Address…</string>
    <string name="books">Books</string>
    <string name="action_settings">Settings</string>
    <string name="insert_library_name">Insert Library Name…</string>
    <string name="insert_book_title">Insert Book Title…</string>
    <string name="add_remove_favorites">Add/Remove\n Favorites</string>
    <string name="check_in_book">Check in Book</string>
    <string name="check_out_book">Check out Book</string>
    <string name="library_name">Library Name</string>
    <string name="available_books">Available books</string>
    <string name="add_remove_from_favorites">Add/Remove\nfrom Favorites</string>
    <string name="find_in_map">Find in map!</string>
    <string name="location_not_found">Location not found</string>
    <string name="go_to_location">Go to Location</string>
    <string name="back">BACK</string>
    <string name="default_book">default Book</string>
    <string name="create_library">CREATE</string>
    <string name="see_more">See more</string>
    <string name="book_notif_disabled">Notify when available</string>
    <string name="book_notif_enabled">Don\'t notify</string>
    <string name="notify_when_available">Notify when available</string>
    <string name="camera">camera</string>
    <string name="book_title">Book title</string>
    <string name="book_available_in_following_libraries">Available in the following libraries:</string>
    <string name="default_library_name">Library default</string>
    <string name="default_library_distance">0.0Km</string>
</resources>