<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/library_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/no_library_selected"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/library_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/library_name_title"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/library_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/location_not_found" />

        <ImageView
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:src="@drawable/library_photo_default"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

    </LinearLayout>
    
    <GridLayout
        android:id="@+id/library_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/library_info"
        android:layout_centerHorizontal="true"
        android:rowCount="2"
        android:columnCount="2" >

        <!-- ADD/REMOVE FROM FAVORITES -->
        <androidx.cardview.widget.CardView
            android:id="@+id/library_add_remove_favorites_btn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/almost_white"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/favorite_library"
                    android:tag="unselected"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/library_favorite_unselected" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/add_remove_from_favorites"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- LIST ALL AVAILABLE BOOKS -->
        <androidx.cardview.widget.CardView
            android:id="@+id/library_list_available_books_btn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/almost_white"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/library_list_books" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/available_books"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CHECK IN BOOK -->
        <androidx.cardview.widget.CardView
            android:id="@+id/library_check_in_book_btn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/almost_white"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/library_book_barcode" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/check_in_book"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CHECK IN BOOK -->
        <androidx.cardview.widget.CardView
            android:id="@+id/library_check_out_book_btn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/almost_white"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/library_book_barcode" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/check_out_book"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/return_to_main_btn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@id/library_actions"
        android:layout_centerHorizontal="true"
        android:layout_gravity="fill"
        app:cardBackgroundColor="@color/almost_white"
        app:cardCornerRadius="18dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/return_arrow"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/back"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>